--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8">
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="wrap">
     <div class="background">
     </div>
     <div class="login">
-      <div class="logo">
+      <div class="logo">FITS
       </div>
-      <div class="title">
+      <div class="title">나의 스니커즈 라이브러리
       </div>
      <div class="login-box">
-        <div class="email-input">
+        <div class="email-input">this is for email
         </div>
-        <div class="pw-input">
+        <div class="pw-input">this is for password
         </div>
-        <div class="login-btn">
+        <div class="login-btn">login
         </div>
-        <div class="join-btn">
+        <div class="join-btn">join
         </div>
-        <div class="facebook-btn">
+        <div class="facebook-btn">login with facebook account
         </div>
       </div>
     </div>
